log
Fri, Apr 18, 2025  7:36:50 PM: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:58:37: error: invalid operands to binary % (have 'Pair * {aka struct Pair *}' and 'long int')
             current = (current + 1) % map->capacity;
                       ~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
hashmap.c:60:12: error: 'Pair {aka struct Pair}' has no member named 'next'
         par->next = map->buckets[idx];
            ^~
eeef3b7
Sat, Apr 19, 2025  3:01:05 PM: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  4|5
total_score: 20/70
397cb7b
Sat, Apr 19, 2025  3:13:18 PM: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
5394ec7
Sat, Apr 19, 2025  3:15:00 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
ecf81b7
Sat, Apr 19, 2025  3:33:40 PM: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  6|3
total_score: 40/70
7cf4a67
Sat, Apr 19, 2025  3:40:27 PM: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:104:30: error: 'NUL' undeclared (first use in this function)
     if (map->buckets[idx] == NUL) {
                              ^~~
hashmap.c:104:30: note: each undeclared identifier is reported only once for each function it appears in
ef0ae83
Sat, Apr 19, 2025  3:40:50 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
3f84b4e
Sat, Apr 19, 2025  3:48:12 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|3
total_score: 40/70
e520c1a
